k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundtable
spec:
  type: ClusterIP
  selector:
    app: roundtable
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
